--- a/src/App.css
+++ b/src/App.css
@@ -77,11 +77,46 @@ margin: 5px;
 }
 
 /* PreLoaded Games */
-.preloaded iframe {
-  width: 100%;
+.gamecontainer iframe {
+  width: 98vw;
   height: 80vh;
 }
 
+.gamecontainer{
+  position: relative;
+  width: 98vw;
+  height: 80vh;
+  margin-bottom: 1vh;
+  overflow: hidden;
+}
+.preloaded{
+display: flex;
+flex-direction: column;
+
+}
+
+.overlay {
+  position: absolute; 
+  width: 100%; 
+  height: 100%; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); 
+  z-index: 2; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.visible{
+  display:inherit;
+  }
+
+.hidden{
+  display:none;
+}
 /* .frame iframe{
 
   pointer-events: none;
