--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,29 @@ flex-direction: column;
 .hidden{
   display:none;
 }
+
+.NurseryRhymes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.storyTime {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.displayprofile{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 25vw;
+  background-color: white; /* set background color to white */
+  border: 1px solid black; /* set thin black border */
+  padding: 20px; /* add some padding for better appearance */
+
+}
 /* .frame iframe{
 
   pointer-events: none;
