--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 25vw;
+  width: 20vw;
   background-color: white; /* set background color to white */
   border: 1px solid black; /* set thin black border */
   padding: 20px; /* add some padding for better appearance */
@@ -66,7 +66,8 @@ form {
 }
 .keyboard button {
   border: 2px solid red; /* add red border */
-  background-color: beige; /* change background color to beige */
+  background-color: rgb(165, 165, 146); /* change background color to a neutral base color */
+  background-image: linear-gradient(to bottom, rgb(165, 165, 146), rgb(133, 99, 39)); /* add a gradient background */
   color: red; /* change text color to red */
   font-size: 24px;
   padding: 10px;
